# MachineVision

./: CMakeLists.txt  LICENSE  Main.qml  main.cpp
qml/: AlgoDialog.qml  BottomBar.qml  ConnectionSetting.qml  ConnectionView.qml  GlobalScript.qml  GlobalVariable.qml  ImageWindow.qml  LayoutSetting.qml  MainContent.qml  RunView.qml  TopBar.qml
res/: res.qrc
src/: AbstractAlgorithm.cpp  AbstractAlgorithm.h  AbstractConnection.cpp  AbstractConnection.h  AlgorithmManager.cpp  AlgorithmManager.h  AlgorithmScriptEngine.cpp  AlgorithmScriptEngine.h  CameraConnection.cpp  CameraConnection.h  ConnectionManager.cpp  ConnectionManager.h  DefaultAlgorithm.cpp  DefaultAlgorithm.h  FileConfig.cpp  FileConfig.h  FileScriptEngine.cpp  FileScriptEngine.h  GlobalVariableManager.cpp  GlobalVariableManager.h  Logger.cpp  Logger.h  ModbusTcpClient.cpp  ModbusTcpClient.h  ScriptApi.cpp  ScriptApi.h  ScriptManager.cpp  ScriptManager.h  SerialConnection.cpp  SerialConnection.h  SystemMonitor.cpp  SystemMonitor.h
